report/dashboard folder sharing

--- a/force-app/main/default/reports/Volunteer_Reporting.reportFolder-meta.xml
+++ b/force-app/main/default/reports/Volunteer_Reporting.reportFolder-meta.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ReportFolder xmlns="http://soap.sforce.com/2006/04/metadata">
     <folderShares>
+        <accessLevel>View</accessLevel>
+        <sharedTo>AllInternalUsers</sharedTo>
+        <sharedToType>Organization</sharedToType>
+    </folderShares>
+    <folderShares>
         <accessLevel>Manage</accessLevel>
-        <sharedTo>test-fytbolzfg1xp@example.com</sharedTo>
+        <sharedTo>test-blrynvyzqmws@example.com</sharedTo>
         <sharedToType>User</sharedToType>
     </folderShares>
     <name>Volunteer Reporting</name>
